[package]
name = "tubu"
version = "0.1.0"
edition = "2024"
default-run = "tubu"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
quick-xml = { version = "0.37", features = ["serialize"] }
url = "2.5.8"
indicatif = "0.17"
tokio-util = "0.7"

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.reqwest]
version = "0.13"
features = ["json"]

[dependencies.nix]
version = "0.31.3"
features = ["fs", "mman"]
